# humorbench

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo_prompt.txt  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
completions/en/apertus-8b/: en_task1_apertus-8b_run1.txt  en_task1_apertus-8b_run3.txt  en_task2_apertus-8b_run2.txt  en_task2_apertus-8b_run4.txt  en_task2_apertus-8b_run5.txt
datasets/: standup4ai_es.txt
datasets/data/: standup4ai_es.csv  standup4ai_es.txt
datasets/en_prompts/: prompts_task1.txt  prompts_task1_a-e.txt  prompts_task1_f-z.txt  prompts_task2.txt  prompts_task2_a-e.txt  prompts_task2_f-z.txt
datasets/es_prompts/: prompts_task1_es.txt  prompts_task1_jokes_ortho_typo.txt  prompts_task2_es.txt  prompts_task2_jokes_semantic_drift.txt
datasets/jokes_es/: jokes_semantic_drift.tsv  metadata.json
datasets/labeled/: a-e_labels_tasks1&2.tsv  en_task1&2.tsv  es_labelled.tsv  f-z_labels_tasks1&2.tsv  jokes_ortho_typo.tsv  jokes_semantic_drift.tsv  spanish_single_lines.tsv
datasets/perturbed/: prompts_task1_cultural.txt  prompts_task1_ortho.txt  prompts_task1_sem_drift.txt  prompts_task1_sem_pres.txt  prompts_task2_cultural.txt  prompts_task2_ortho.txt  prompts_task2_sem_drift.txt  prompts_task2_sem_pres.txt
datasets/perturbed_en/: jokes_cultural_shift.tsv
datasets/perturbed_es/: jokes_ortho_typo.tsv
datasets/peturbed_es/: prompts_task1_jokes_semantic_drift.txt
datasets/prompts_es/: prompts_task1_jokes_semantic_preserving.txt  prompts_task2_es_original.txt  prompts_task2_jokes_ortho_typo.txt  prompts_task2_jokes_semantic_preserving.txt
datasets/standup4ai_es_transcripts/: -F7brR8g3O8.txt  -VEUC_dEDDw.txt  1-idmu_Yg6k.txt  1DirzpxlV7g.txt  2K70agUndAE.txt  2dHVU122Io4.txt  3nVI8lH4kew.txt  3xhdCBv2WB4.txt  4hzZtqsecZY.txt  5Lbj6kIi-Kw.txt  5XgJfItNg_Q.txt  6WG_uQPT3cA.txt  6pC3wDvqfUM.txt  6ze5tF5vzZ8.txt  7B0YoyC-Tf8.txt  7HQDM28bssU.txt  8gLqDgPyyy8.txt  B-jtJ0NexM0.txt  BCG3EtWmKOE.txt  CHCK0QWYbD8.txt  CYqKp_CoT5I.txt  CjAkl-UJWuM.txt  DVXHc7WdsWc.txt  DnTAqOfjSoc.txt  E0e92JjF5IA.txt  E2bDiEfUA78.txt  E6w68D5ngxc.txt  EiZh_nE2ZEo.txt  FPWrHkrLIVw.txt  FjqHJQdC5Es.txt  FpLNtryn2Mg.txt  G9pLaAJf-OQ.txt  GOHhf1zaP6M.txt  GgUEOit8za0.txt  H5HAjQSirpg.txt  HJVEUbN2qOA.txt  IIIyaBvg7cA.txt  J1NYJu9ENMg.txt  JA9T3gWBckQ.txt  JGNSqPjB-Hk.txt  (+51 more)
datasets/testing/: filename.csv  test.py
datasets/transcripts/: adam-devine-best-time-of-our-lives-transcript.txt  adam-sandler-love-you-transcript.txt  adel-karam-live-from-beirut-transcript.txt  ahir-shah-dots-transcript.txt  ahir-shah-ends-transcript.txt  al-madrigal-why-is-the-rabbit-crying-2013-full-transcript.txt  alex-edelman-just-for-us-transcript.txt  ali-wong-baby-cobra-2016-full-transcript.txt  ali-wong-don-wong-transcript.txt  ali-wong-single-lady-transcript.txt  amanda-seales-i-be-knowin-transcript.txt  amy-schumer-emergency-contact-transcript.txt  amy-schumer-growing-transcript.txt  amy-schumer-presents-parental-advisory-transcript.txt  andrew-santino-cheeseburger-transcript.txt  andrew-santino-home-field-advantage-transcript.txt  anjelah-johnson-not-fancy-transcript.txt  anthony-jeselnik-bones-and-all-transcript.txt  anthony-jeselnik-fire-in-the-maternity-ward-transcript.txt  ari-shaffir-americas-sweetheart-transcript.txt  aziz-ansari-buried-alive-2013-full-transcript.txt  aziz-ansari-nightclub-comedian-transcript.txt  aziz-ansari-right-now-transcript.txt  bassem-youssef-the-dark-side-of-making-it-on-social-media-transcript.txt  bert-kreischer-lucky-transcript.txt  bert-kreischer-razzle-dazzle-transcript.txt  beth-stelling-girl-daddy-transcript.txt  beth-stelling-if-you-didnt-want-me-then-transcript.txt  bill-burr-i-2008-testo-italiano-completo.txt  bill-burr-ill-never-own-a-helicopter-transcript.txt  bill-burr-late-show-with-david-letterman-2010.txt  bill-burr-live-at-red-rocks-transcript.txt  bill-burr-paper-tiger-transcript.txt  bill-burr-presents-friends-who-kill-transcript.txt  bill-burr-snl-monologue-2020-transcript.txt  bill-burr-the-philadelphia-incident-2006-transcript.txt  bill-hicks-censored-david-letterman-transcript.txt  bill-hicks-live-at-laff-stop-austin-tx-and-cobbs-san-francisco-ca-1993.txt  bill-maher-is-anyone-else-seeing-this-transcript.txt  bill-maher-live-from-d-c-2014-full-transcript.txt  (+306 more)
docs/: api.md  contributing.md  index.md
scripts/: make_perturbed_tsvs.py
src/humorbench/: __init__.py  cli.py  core.py  download_models.py  eval_perturbed_combined.py  eval_perturbed_es.py  eval_task1.py  eval_task2.py  eval_tasks.py  generate_prompts.py  prepare_es_dataset.py  prompts_task1.txt  prompts_task2.txt  run_task.sh  standup_sources.py  vllm_inference.py
src/jokes_perturb/: __init__.py  perturbations.py  punchlines.py  runner.py  tokenization.py
tests/: test_cli.py  test_core.py
(+450 files in other folders)
