[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humorbench"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Atrey Desai", email = "adesai10@umd.edu"},
]
keywords = ["python", "humor", "benchmark"]
classifiers = [
]

dependencies = [
    "vllm>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.8",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/USERNAME/humorbench"
Repository = "https://github.com/USERNAME/humorbench"
Issues = "https://github.com/USERNAME/humorbench/issues"

[project.scripts]
humorbench = "humorbench.cli:main"

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["humorbench"]


